Modify Swagger of login method to correspond with the removal of username field
